--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -295,8 +295,6 @@
     <string name="course_content">Course Content</string>
     <!-- Tab title for course handouts section -->
     <string name="tab_label_handouts">Handouts</string>
-    <!-- Button for last accessed course section. Will be followed by course name -->
-    <string name="last_accessed">Last Accessed</string>
     <!-- Label shown when no courseware content is available -->
     <string name="no_chapter_text">No course content is currently available.</string>
     <!-- Label shown when no mobile-friendly videos are available in a course -->
@@ -321,6 +319,8 @@
     <string name="upgrade_to_verified_today_title">Upgrade to Verified Today</string>
     <!--Title of place order for course upgrade screen-->
     <string name="place_order_title">Place Order</string>
+    <!-- Button for resume course section. Will be followed by course name -->
+    <string name="resume_course">Resume Course</string>
 
     <!-- Mobile Payments -->
     <string name="payments_info_header">Pursue a Verified Certificate!</string>
