--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -319,8 +319,8 @@
     <string name="upgrade_to_verified_today_title">Upgrade to Verified Today</string>
     <!--Title of place order for course upgrade screen-->
     <string name="place_order_title">Place Order</string>
-    <!-- Button for resume course section. Will be followed by course name -->
-    <string name="resume_course">Resume Course</string>
+    <!-- label for resume course section. Will be followed by course name -->
+    <string name="label_resume">Resume</string>
 
     <!-- Mobile Payments -->
     <string name="payments_info_header">Pursue a Verified Certificate!</string>
