--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -278,7 +278,16 @@
     <string name="course_modal_graded_assignment_locked">Graded assignments are locked</string>
     <!-- Label Course Modal Graded Assignments Locked description -->
     <string name="course_modal_graded_assignment_locked_description">Upgrade to gain access to locked features like this one and get the most out of your course.</string>
-
+    <!-- Subtitle labels for video durations in hours-->
+    <plurals name="video_duration_hour">
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
+    </plurals>
+    <!-- Subtitle labels for video durations in minutes-->
+    <plurals name="video_duration_minutes">
+        <item quantity="one">%d min</item>
+        <item quantity="other">%d mins</item>
+    </plurals>
 
 
     <!-- Label for date when course is expiring in a specific time frame like in 2 days -->
@@ -807,4 +816,6 @@
     <string name="keep_going_text">Keep going</string>
     <!-- Sharing message when user wants to share the celebration -->
     <string name="celebration_share_message">I\'m on my way to completing {course_name} online with @{platform_name}online. What are you spending your time learning? #my{platform_name}journey</string>
+    <!-- accessibility label for section completion-->
+    <string name="course_outline_completion_description">Completed</string>
 </resources>
