feat: open rendered HTML block that having iframe in mobile browser
- Evaluate js code to check that the HTML block contains the iFrame
  and display the open in browser footer.

Fixes: LEARNER-8363

--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -818,4 +818,8 @@
     <string name="celebration_share_message">I\'m on my way to completing {course_name} online with @{platform_name}online. What are you spending your time learning? #my{platform_name}journey</string>
     <!-- accessibility label for section completion-->
     <string name="course_outline_completion_description">Completed</string>
+    <!-- Open in browser message -->
+    <string name="open_in_browser_message">This part of the course may work best in a web browser.</string>
+    <!-- Open in browser Title -->
+    <string name="open_in_browser_text"><u>Open in browser</u></string>
 </resources>
