chore: added UI changes to support for IAP - Modify the Value Prop for IAP - Remove unused files and code related to Value prop - Embedded the the upgrading benefits in locked content unit - Animate Embedded view on tapping show more/less - Added analytics for the respective events BREAKING CHANGE: `IAP_ENABLED` key in config file is now used for IAP_Feature enable fix: LEARNER-8468, 8427, 8469, 8491

--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -298,15 +298,15 @@
 
     <!-- Label My Courses Graded content Button -->
     <string name="course_value_prop_button">Learn more</string>
-    <!-- Title Course Dashboard Modal  -->
-    <string name="course_dashboard_modal_title">Access to edX course features</string>
     <!-- Label Course Modal heading -->
-    <string name="course_modal_heading">When you upgrade, you:</string>
+    <string name="course_modal_heading">Upgrade {course_name}</string>
     <!-- Label Course Modal features -->
     <string name="course_modal_earn_certificate">Earn a verified certificate of completion to showcase on your resume</string>
     <string name="course_modal_unlock_access">Unlock access to all course activities, including graded assignments</string>
-    <string name="course_modal_full_access_course">Full access to course content and materials, even after the course ends</string>
+    <string name="course_modal_full_access_course">Full access to course content and course material even after the course ends</string>
     <string name="course_modal_support_non_profit">Support our non-profit mission at {platform_name}</string>
+    <!-- Label Course Upgrade button  -->
+    <string name="label_upgrade_course_button">Upgrade now for $99</string>
     <!-- Title Course Locked Modal  -->
     <string name="course_locked_modal_title">Learn more about locked features</string>
     <!-- Label Course Modal Unlock Graded Assignments -->
@@ -314,7 +314,11 @@
     <!-- Label Course Modal Graded Assignments Locked -->
     <string name="course_modal_graded_assignment_locked">Graded assignments are locked</string>
     <!-- Label Course Modal Graded Assignments Locked description -->
-    <string name="course_modal_graded_assignment_locked_description">Upgrade to gain access to locked features like this one and get the most out of your course.</string>
+    <string name="course_modal_graded_assignment_locked_description">Upgrade to gain access to locked features like this one and get the most out of your course</string>
+    <!-- Label Course Modal Graded Assignments show more -->
+    <string name="course_modal_graded_assignment_show_more"><u>Show more</u></string>
+    <!-- Label Course Modal Graded Assignments show less -->
+    <string name="course_modal_graded_assignment_show_less"><u>Show less</u></string>
     <!-- Subtitle labels for video durations in hours-->
     <plurals name="video_duration_hour">
         <item quantity="one">%d hour</item>
