--- a/OpenEdXMobile/res/values-ar/strings.xml
+++ b/OpenEdXMobile/res/values-ar/strings.xml
@@ -46,7 +46,7 @@
   <string name="share_course_button">مشاركة المُساق</string>
   <!--Share course-->
   <string name="share_course_message">أحضر حاليًا مساقًا ممتعًا على منصّة {platform_name}! اطلع عليه:</string>
-  <!--Settings Page-->
+  <!--Profile Page-->
   <!--Label for wifi only switch-->
   <string name="settings_wifi_top">التحميل من خلال الـ Wi-Fi فقط</string>
   <!--Label explaining what wifi only means in detail-->
@@ -107,8 +107,6 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">عرض التحميلات الحاليّة</string>
-  <!--Content description for edit profile button-->
-  <string name="open_profile_button">الدخول إلى صفحتك الشخصية</string>
   <!--Title of user's course list screen-->
   <string name="label_my_courses">المساقات</string>
   <!--Title of user's program list screen-->
@@ -129,14 +127,8 @@
   <string name="toggle_turn_off">إطفاء</string>
   <!--Logout button label-->
   <string name="logout">تسجيل الخروج</string>
-  <!--Settings screen title-->
-  <string name="settings_txt">الإعدادات</string>
-  <!--Settings screen version-->
+  <!--Profile screen version-->
   <string name="label_version">نوع إصدار التطبيق</string>
-  <!--Button text to show user Settings screen-->
-  <string name="label_settings">الإعدادات</string>
-  <!--Title of Account screen-->
-  <string name="title_account">الحساب</string>
   <!--Help Dialog Place Holder messages-->
   <!--Reset password alert dialog title-->
   <string name="confirm_dialog_title_help">استعادة كلمة السر</string>
