--- a/OpenEdXMobile/res/values-de-rDE/strings.xml
+++ b/OpenEdXMobile/res/values-de-rDE/strings.xml
@@ -46,7 +46,7 @@
   <string name="share_course_button">Meine Kurse teilen</string>
   <!--Share course-->
   <string name="share_course_message">Ich mache einen Kurs auf der {platform_name}! Schauen Sie es sich an:</string>
-  <!--Settings Page-->
+  <!--Profile Page-->
   <!--Label for wifi only switch-->
   <string name="settings_wifi_top">Download nur über Wi-Fi</string>
   <!--Label explaining what wifi only means in detail-->
@@ -107,8 +107,6 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Aktuelle Downloads sehen</string>
-  <!--Content description for edit profile button-->
-  <string name="open_profile_button">Profil aufrufen</string>
   <!--Title of user's course list screen-->
   <string name="label_my_courses">Kurse</string>
   <!--Title of user's program list screen-->
@@ -129,14 +127,8 @@
   <string name="toggle_turn_off">Aus</string>
   <!--Logout button label-->
   <string name="logout">Abmelden</string>
-  <!--Settings screen title-->
-  <string name="settings_txt">Einstellungen</string>
-  <!--Settings screen version-->
+  <!--Profile screen version-->
   <string name="label_version">App-Version</string>
-  <!--Button text to show user Settings screen-->
-  <string name="label_settings">Einstellungen</string>
-  <!--Title of Account screen-->
-  <string name="title_account">Benutzerkonto</string>
   <!--Help Dialog Place Holder messages-->
   <!--Reset password alert dialog title-->
   <string name="confirm_dialog_title_help">Passwort zurücksetzen</string>
