--- a/OpenEdXMobile/res/values-es/strings.xml
+++ b/OpenEdXMobile/res/values-es/strings.xml
@@ -46,7 +46,7 @@
   <string name="share_course_button">Compartir este curso</string>
   <!--Share course-->
   <string name="share_course_message">Estoy tomando un curso en {platform_name}! Dale un vistazo:</string>
-  <!--Settings Page-->
+  <!--Profile Page-->
   <!--Label for wifi only switch-->
   <string name="settings_wifi_top">Descargar solo por Wi-Fi</string>
   <!--Label explaining what wifi only means in detail-->
@@ -107,8 +107,6 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Ver descargas</string>
-  <!--Content description for edit profile button-->
-  <string name="open_profile_button">Abrir su perfil</string>
   <!--Title of user's course list screen-->
   <string name="label_my_courses">Cursos</string>
   <!--Title of user's program list screen-->
@@ -129,14 +127,8 @@
   <string name="toggle_turn_off">Apagado</string>
   <!--Logout button label-->
   <string name="logout">Salir</string>
-  <!--Settings screen title-->
-  <string name="settings_txt">Opciones</string>
-  <!--Settings screen version-->
+  <!--Profile screen version-->
   <string name="label_version">Versión de la aplicación</string>
-  <!--Button text to show user Settings screen-->
-  <string name="label_settings">Configuración</string>
-  <!--Title of Account screen-->
-  <string name="title_account">Cuenta</string>
   <!--Help Dialog Place Holder messages-->
   <!--Reset password alert dialog title-->
   <string name="confirm_dialog_title_help">Restablecer contraseña</string>
