--- a/OpenEdXMobile/res/values-pt-rBR/strings.xml
+++ b/OpenEdXMobile/res/values-pt-rBR/strings.xml
@@ -45,7 +45,7 @@
   <string name="share_course_button">Compartilhe seu curso</string>
   <!--Share course-->
   <string name="share_course_message">Estou fazendo um curso no {platform_name}! Confira:</string>
-  <!--Settings Page-->
+  <!--Profile Page-->
   <!--Label for wifi only switch-->
   <string name="settings_wifi_top">Baixar somente com Wi-Fi</string>
   <!--Label explaining what wifi only means in detail-->
@@ -106,8 +106,6 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Visualizar transferências atuais</string>
-  <!--Content description for edit profile button-->
-  <string name="open_profile_button">Abra seu perfil</string>
   <!--Title of user's course list screen-->
   <string name="label_my_courses">Cursos</string>
   <!--Title of user's program list screen-->
@@ -128,14 +126,8 @@
   <string name="toggle_turn_off">Off</string>
   <!--Logout button label-->
   <string name="logout">Sair</string>
-  <!--Settings screen title-->
-  <string name="settings_txt">Configurações</string>
-  <!--Settings screen version-->
+  <!--Profile screen version-->
   <string name="label_version">Versão do aplicativo</string>
-  <!--Button text to show user Settings screen-->
-  <string name="label_settings">Configurações</string>
-  <!--Title of Account screen-->
-  <string name="title_account">Conta</string>
   <!--Help Dialog Place Holder messages-->
   <!--Reset password alert dialog title-->
   <string name="confirm_dialog_title_help">Redefinir senha</string>
