--- a/OpenEdXMobile/res/values-tr/strings.xml
+++ b/OpenEdXMobile/res/values-tr/strings.xml
@@ -46,7 +46,7 @@
   <string name="share_course_button">Dersinizi paylaşın</string>
   <!--Share course-->
   <string name="share_course_message">{platform_name} üzerinde ders alıyorum! Buna bir bak:</string>
-  <!--Settings Page-->
+  <!--Profile Page-->
   <!--Label for wifi only switch-->
   <string name="settings_wifi_top">Sadece Wi-Fi ile indir</string>
   <!--Label explaining what wifi only means in detail-->
@@ -107,8 +107,6 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Şu anki indirmeleri görüntüle</string>
-  <!--Content description for edit profile button-->
-  <string name="open_profile_button">Profilinizi açın</string>
   <!--Title of user's course list screen-->
   <string name="label_my_courses">Derslerim</string>
   <!--Title of user's program list screen-->
@@ -129,14 +127,8 @@
   <string name="toggle_turn_off">Kapalı</string>
   <!--Logout button label-->
   <string name="logout">Çıkış</string>
-  <!--Settings screen title-->
-  <string name="settings_txt">Ayarlar</string>
-  <!--Settings screen version-->
+  <!--Profile screen version-->
   <string name="label_version">Uygulama sürümü</string>
-  <!--Button text to show user Settings screen-->
-  <string name="label_settings">Ayarlar</string>
-  <!--Title of Account screen-->
-  <string name="title_account">Hesap</string>
   <!--Help Dialog Place Holder messages-->
   <!--Reset password alert dialog title-->
   <string name="confirm_dialog_title_help">Parolayı Sıfırla</string>
