--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -898,11 +898,11 @@
     <!-- Auto Video Quality option -->
     <string name="auto_recommended_text">Auto (Recommended)</string>
     <!-- 360p Video Quality option -->
-    <string name="p360_quality_option">360p (Smallest file size)</string>
+    <string name="video_quality_p360">360p (Smallest file size)</string>
     <!-- 540p Video Quality option -->
-    <string name="p540_quality_option">540p</string>
+    <string name="video_quality_p540">540p</string>
     <!-- 720p Video Quality option -->
-    <string name="p720_quality_option">720p (Best quality)</string>
+    <string name="video_quality_p720">720p (Best quality)</string>
     <!-- Message shows in Video Quality dialog -->
     <string name="video_download_quality_message">This setting is for all video downloads in the {platform_name} app.</string>
 </resources>
