--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -908,4 +908,16 @@
     <string name="open_in_browser_text"><u>Open in browser</u></string>
     <!-- Error message while creating calendar for the course events -->
     <string name="adding_calendar_error_message">Error Adding Calendar, Please try later</string>
+    <!-- Title of Video Quality Dialog -->
+    <string name="video_download_quality_title">Video download quality</string>
+    <!-- Auto Video Quality option -->
+    <string name="auto_recommended_text">Auto (Recommended)</string>
+    <!-- 360p Video Quality option -->
+    <string name="video_quality_p360">360p (Smallest file size)</string>
+    <!-- 540p Video Quality option -->
+    <string name="video_quality_p540">540p</string>
+    <!-- 720p Video Quality option -->
+    <string name="video_quality_p720">720p (Best quality)</string>
+    <!-- Message shows in Video Quality dialog -->
+    <string name="video_download_quality_message">This setting is for all video downloads in the {platform_name} app.</string>
 </resources>
